Optimize: 1. Add min-width to left-main, avoid img content display error while the browser's width too small.

--- a/XiaoWei/Task05/css/index.css
+++ b/XiaoWei/Task05/css/index.css
@@ -70,6 +70,7 @@ main {
 }
 
 main .left-main {
+    min-width: 720px;
     box-sizing: border-box;
     width: 100%;
    float: left;
